bug #96 move libraries to library - better alignment of like rotator

--- a/view/theme/duepuntozero/style.css
+++ b/view/theme/duepuntozero/style.css
@@ -1003,8 +1003,12 @@ input#dfrn-url {
 .wall-item-like-buttons {
 	float: left;
 	margin-right: 10px;
-	padding-right: 10px;
-	border-right: 2px solid #fff;
+/*	padding-right: 10px; */
+/*	border-right: 2px solid #fff; */
+}
+
+.like-rotator {
+	margin-left: 5px;
 }
 
 .wall-item-like-buttons > a,
@@ -1018,6 +1022,7 @@ input#dfrn-url {
 
 .wall-item-share-buttons {
 	margin-left: 10px;
+	margin-right: 10px;
 }
 
 .editpost {
